--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,6 +1,6 @@
 <table>
   <% @elements.each do |t| %>
-    <tr><td><%= User.find(t.user_id).email %></td><td><%= t.texto %></td></tr>
+    </td><td><%= t.texto %></td></tr>
   <% end %>
 </table>
 
