--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,6 +1,8 @@
 <table>
   <% @elements.each do |t| %>
-    </td><td><%= t.texto %></td></tr>
+    <% if current_user == 1 || !t.hide %>
+      </td><td><%= t.texto %></td></tr>
+    <% end %>
   <% end %>
 </table>
 
